--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "unida-backend",
   "version": "1.0.0",
+  "description": "Backend for UNIDA platform",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
@@ -12,5 +15,4 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0"
   }
-
 }
