--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "unida-backend",
   "version": "1.0.0",
-  "description": "Backend for UNIDA platform",
+  "description": "Backend for Unida platform",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cloudinary": "^1.41.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "mongoose": "^8.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
-  }
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "author": "unida",
+  "license": "MIT"
 }
